# keysat

./: .dockerignore  .gitignore  CUTTING_V0.2.0.md  Dockerfile  KEYSAT_AGENT_GUIDE.md  KEYSAT_INTEGRATION.md  LICENSE  Makefile  README.md  instructions.md  package-lock.json  package.json  prepare.sh  s9pk.mk.README  tsconfig.json
assets/: ABOUT.md
licensing-service/: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
licensing-service/docs/: API.md  ARCHITECTURE.md  INTEGRATION.md
licensing-service/migrations/: 0001_initial.sql  0002_btcpay_config.sql  0003_expanded_features.sql  0004_discount_codes.sql  0005_settings.sql  0006_policy_tip_recipient.sql  0007_tiered_pricing.sql  0008_web_sessions.sql  0009_discount_codes_set_price.sql  0010_multi_currency.sql  0011_subscriptions.sql  0012_zaprite_config.sql  0013_tier_upgrades.sql  0014_product_entitlements_catalog.sql  0015_policy_archive.sql  0016_scoped_api_keys.sql  0017_featured_discount_codes.sql  0018_discount_codes_multi_policy.sql  0019_zaprite_saved_profiles.sql  0020_merchant_profiles.sql  0021_invoice_provider_link.sql  0022_btcpay_state_profile.sql  0023_merchant_onboard_role.sql  0024_scoped_key_extra_scopes.sql  0025_authorize_state_scoped_initiator.sql
licensing-service/src/: analytics.rs  config.rs  error.rs  lib.rs  license_self.rs  main.rs  merchant_profiles.rs  models.rs  rate_limit.rs  rates.rs  reconcile.rs  subscriptions.rs  tipping.rs  upgrades.rs  webhooks.rs
licensing-service/src/api/: admin.rs  admin_ui.rs  api_keys.rs  auth.rs  btcpay_authorize.rs  buy_page.rs  community.rs  db_info.rs  discount_codes.rs  issuer_key.rs  machines.rs  merchant_profiles.rs  mod.rs  openapi.rs  payment_provider.rs  policies.rs  products.rs  purchase.rs  rates_admin.rs  recover.rs  redeem.rs  self_license.rs  session_layer.rs  subscriptions.rs  tier.rs  upgrade.rs  validate.rs  webhook.rs  webhook_deliveries.rs  webhook_endpoints.rs  zaprite_authorize.rs
licensing-service/src/btcpay/: client.rs  config.rs  mod.rs  network.rs  webhook.rs
licensing-service/src/crypto/: keys.rs  mod.rs
licensing-service/src/db/: mod.rs  repo.rs
licensing-service/src/payment/: btcpay.rs  mod.rs
licensing-service/src/payment/zaprite/: client.rs  config.rs  mod.rs  provider.rs
licensing-service/tests/: api.rs  btcpay_network_live.rs  crosscheck.rs  migrations.rs  subscriptions.rs  upgrades.rs  worker.rs
licensing-service/web/: index.html
onboarding-harness/: .gitignore  README.md  STAGE1-RESULT.md  boot-fixture.sh  lib.sh  make-sandbox.sh  provision.sh  run.sh  serve-docs.sh  teardown.sh
onboarding-harness/sandbox-template/: README.md  next.config.mjs  package.json
onboarding-harness/stage2/: STAGE2-RESULT.md  buyer-pay.sh  run-stage2.sh  teardown-stage2.sh  validate-gate.sh
startos/: backups.ts  dependencies.ts  index.ts  interfaces.ts  main.ts  sdk.ts  utils.ts
startos/actions/: activateLicense.ts  activatePaymentProvider.ts  configureBtcpay.ts  configureZaprite.ts  createDiscountCode.ts  createPolicy.ts  createProduct.ts  deactivateMachine.ts  disableDiscountCode.ts  index.ts  issueLicense.ts  listDiscountCodes.ts  listMachines.ts  listWebhooks.ts  registerWebhook.ts  revokeLicense.ts  searchLicenses.ts  setOperatorName.ts  setWebUiPassword.ts  showCredentials.ts  suspendLicense.ts  unsuspendLicense.ts  viewAuditLog.ts
startos/fileModels/: store.ts
startos/init/: index.ts
startos/manifest/: i18n.ts  index.ts
startos/versions/: index.ts  v0.1.0.ts  v0.2.0.ts
(+8 files in other folders)
